# optarg2chain

./: Cargo.toml  LICENSE  README.md
examples/: builder.rs
src/: doc.rs  generics.rs  lib.rs
tests/: function.rs  impl.rs
