[package]
name = "optarg2chain"
version = "0.1.0"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]
description = "Converts optional arguments to chaining style."
categories = ["rust-patterns", "no-std"]
keywords = ["no_std"]
repository = "https://github.com/garkimasera/optarg2chain"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "fold", "extra-traits"] }

[dev-dependencies]
futures = "0.3"
